// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToastProvider > matches the en snapshot for a queued toast 1`] = `
<div
  aria-describedby="_r_s_"
  aria-labelledby="_r_r_"
  aria-modal="false"
  class="dt-toast"
  data-type="warning"
  role="alert"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: 0; --toast-offset-y: 0px;"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="dt-toast-dot dt-toast-dot-warning"
  />
  <div
    class="dt-toast-body"
  >
    <h2
      class="dt-toast-title"
      data-type="warning"
      id="_r_r_"
    >
      Saved
    </h2>
    <p
      class="dt-toast-desc"
      data-type="warning"
      id="_r_s_"
    >
      Changes applied
    </p>
  </div>
  <button
    aria-hidden="true"
    aria-label="Close"
    class="dt-toast-close"
    data-type="warning"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="15"
      viewBox="0 0 24 24"
      width="15"
    >
      <path
        d="M6 6l12 12M18 6L6 18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`ToastProvider > matches the ko snapshot for a queued toast 1`] = `
<div
  aria-describedby="_r_p_"
  aria-labelledby="_r_o_"
  aria-modal="false"
  class="dt-toast"
  data-type="warning"
  role="alert"
  style="--toast-swipe-movement-x: 0px; --toast-swipe-movement-y: 0px; --toast-index: 0; --toast-offset-y: 0px;"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="dt-toast-dot dt-toast-dot-warning"
  />
  <div
    class="dt-toast-body"
  >
    <h2
      class="dt-toast-title"
      data-type="warning"
      id="_r_o_"
    >
      Saved
    </h2>
    <p
      class="dt-toast-desc"
      data-type="warning"
      id="_r_p_"
    >
      Changes applied
    </p>
  </div>
  <button
    aria-hidden="true"
    aria-label="닫기"
    class="dt-toast-close"
    data-type="warning"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="15"
      viewBox="0 0 24 24"
      width="15"
    >
      <path
        d="M6 6l12 12M18 6L6 18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;
